# Change Log
All notable changes to this project will be documented in this file.
Date based versioning is now used in this project.  This is so that it doesn't get confused with the Dropbox desktop client.

Version 2019.02.14
------------------
	* Update gpg warning to tell users to install the Python 3 GPG
	libraries instead of the Python 2 libraries.
	* Fix bug where the dropbox nautilus repo wasn't being added to
	the apt sources correctly on Ubuntu 18.04 and up.
	* Move build dependencies to Python 3.

Version 2019.01.31
------------------
	* Move to Python 3 and GTK3

Version 2018.11.28
------------------
	* Fix bug where the Dropbox tray icon wouldn't display on Ubuntu
	Unity and Ubuntu Gnome.
	* Reverts the fix to issue #15, where the tray wouldn't display on
	XFCE. If you're using XFCE, try the workarounds in this ticket:
	https://bugs.launchpad.net/ubuntu/+source/nautilus-dropbox/+bug/1546176

Version 2018.11.08:
------------------
	* Add support for Fedora 23 - 29, Debian stretch and buster
	* Drop support for Fedora releases older than 21, Ubuntu releases
	older than trusty, and Debian releases older than jessie
	* Display link url on `status`
	* Fix canonicalize_path
	* Make `exclude` work with unicode paths
	* Fix bug that caused the Dropbox tray icon to not show up in XFCE & LXDE
	* Add "update" command, which updates the Dropbox client
	* Unlink files that are going to be replaced by the unpack
	* Validate that Dropbox runs after downloading it
	* Use python-gpg instead of python-gpgme if it's installed, since
	python-gpgme is not available in Ubuntu 18.04.
	* Update icons included in package to the redesigned icons.

Version 2015.10.28:
------------------
	* Add support for `sharelink`, `proxy`, and `throttle` CLI commands
	* Add support for Fedora 22
	* Add support for Ubuntu 15.10

Version 2015.02.12:
------------------
	* Add support for Fedora 21
	* Add support for Ubuntu 15.04 and 14.10
	* New version numbering format
